Created fillList method for creating List of Bank Accounts

--- a/RevatureBank.cls
+++ b/RevatureBank.cls
@@ -5,7 +5,24 @@
     • Update the account based on all related transactions to show current balance.
 */
 public with sharing class RevatureBank {
+    List<Bank_Account> myAccounts = new List<Bank_Account>;
+
     public RevatureBank() {
 
+    }
+
+//This method is for filling myAccounts with all the Bank Accounts on the Org.
+    public static void fillList()
+    {
+        for(Bank_Account ba: [SELECT ID, name FROM Bank_Account])
+        {
+            myAccounts.add(ba);
+            system.debug(ba.name);
+        }
+    }
+
+    public static void checkOverdrawn()
+    {
+        
     }
 }
