Finished newTransaction and now starting on updateBalance.

--- a/RevatureBank.cls
+++ b/RevatureBank.cls
@@ -24,7 +24,7 @@ public with sharing class RevatureBank {
 //The method will search through the myAccounts list and find a Bank Account
 //with a Bank Account Name field that matches accountNum and then check if that
 //Bank Account's Stored Amount field is in the negatives.
-    public static void checkOverdrawn(String accountNum)
+    public static boolean checkOverdrawn(String accountNum)
     {
         //It's possible that the myAccounts is null, so paranoid programming will help catch an error.
         //Side-Note: I pretty sure a for-loop won't be effective for a Company with thousands
@@ -38,19 +38,25 @@ public with sharing class RevatureBank {
                     if(ba.Stored_Amount__c < 0)
                     {
                         ba.Overdrawn__c = true;
+                        database.update(myAccounts);
                         system.debug('Bank Account has a negative value, Bank Account is Overdrawn.');
+                        return true;
+                        
                     }
                     else 
                     {
                        ba.Overdrawn__c = false;
+                       database.update(myAccounts);
                        system.debug('Bank Account has a positive value, Bank Account is not Overdrawn');
+                       return false;
+                       
                     }
-                    database.update(myAccounts);
-                    //Once match is found, we don't need to check other records.
-                    break;
                 }
             }
-        }
+            system.debug('No matching account was found, make sure you put in the Account Number correctly.');
+        }            
+//The return for no match is true because if it's false in the newTransaction method, the method can continue with a non-existant account.
+            return true; 
     }
 
 /* This is another way I found to complete the checkOverdrawn method, but I think using a for loop is best practice.
@@ -68,13 +74,52 @@ public with sharing class RevatureBank {
                     database.update(focusAccount);
 */
 
-
+//This method will update a Bank Account's balance (Ammount Stored field) after a Transaction
+//This method will be called from the newTransaction record.
+    public static void updateBalance(boolean withdrawal, decimal transactionAmount, BankAccount__c transactionAcct) 
+    {
+        
+    }
     //This method will create a new Transaction record based on three parameters.
     //transactionAcct is the Bank Account making the Transaction
     //The withdrawal bool determines if the transaction is taking money (true) or depositing money (false)
     //transactionAmount is how much money to withdrawal or deposit from the account.
-    public static void newTransaction(BankAccount__c transactionAcct, boolean withdrawal, decimal transactionAmount)
+    public static void newTransaction(String transactionAcct, boolean withdrawal, decimal transactionAmt)
     {
-        
+        //A Bank Account should not be able to make a Transaction if their they're already Overdrawn.
+        boolean isOverdrawn = false;
+        //If making a deposit, we don't care if the Account is Overdrawn.
+        if(!withdrawal)
+        {
+            isOverdrawn = checkOverdrawn(transactionAcct);
+        }
+        if(!isOverdrawn)
+        {
+            Transaction__c newTrans = new Transaction__c();
+            //Using myAccount to find the right Bank Account making the Transaction
+            for(BankAccount__c ba : myAccounts)
+            {
+                if(ba.name == transactionAcct)
+                {
+                    newTrans.LinkedAccount__c = ba.ID;
+                }
+            }
+            newTrans.Transaction_Date__c = Date.Today();
+            newTrans.Transaction_Amount__c = transactionAmt;
+            if(withdrawal)
+            {
+                newTrans.Transaction_Type__c = 'Withdrawal';
+            }
+            else
+            {
+                newTrans.Transaction_Type__c = 'Deposit';
+            }
+            database.insert(newTrans);
+            //updateBalance(withdrawal, transactionAmt, newTrans.LinkedAccount__c);
+        }
+        else
+        {
+            system.debug('Cannot create a new Transaction because ' + transactionAcct + ' is overdrawn');
+        }
     }
 }
